log
Wed Mar 16 23:19:14 -03 2022: 
 tests:  0|6
total_score: 0/70
7607a39
Wed Mar 16 23:27:07 -03 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
427b9eb
Wed Mar 16 23:31:19 -03 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
19a7866
Wed Mar 16 23:33:48 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
80978ab
Wed Mar 16 23:37:34 -03 2022: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
604be3f
Wed Mar 16 23:38:05 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
31d79f2
Wed Mar 16 23:39:58 -03 2022: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
a269280
Wed Mar 16 23:46:12 -03 2022: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
7627c65
Wed Mar 16 23:47:03 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
f1bdb96
Wed Mar 16 23:48:58 -03 2022: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
ae914ee
Wed Mar 16 23:50:10 -03 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
b596094
Wed Mar 16 23:50:46 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
5db9f1b
Wed Mar 16 23:51:59 -03 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
4a86ba1
Thu Mar 17 13:59:09 -03 2022: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  3|5
total_score: 15/70
705ec49
Thu Mar 17 13:59:39 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
99965e0
Thu Mar 17 14:00:08 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
86a278c
Thu Mar 17 14:00:45 -03 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  3|5
total_score: 15/70
cff0139
Thu Mar 17 14:01:26 -03 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
0380c6f
Thu Mar 17 14:04:01 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
4157f7c
Thu Mar 17 14:06:02 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
57431d3
Thu Mar 17 14:07:37 -03 2022: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  3|5
total_score: 15/70
27db2d3
Thu Mar 17 14:18:01 -03 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  3|5
total_score: 15/70
8d5feb8
Thu Mar 17 14:28:21 -03 2022: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
5513d37
Thu Mar 17 14:35:43 -03 2022: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  3|5
total_score: 15/70
170c78c
Thu Mar 17 14:44:58 -03 2022: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|5
total_score: 15/70
f8a8fa4
Thu Mar 17 14:46:21 -03 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
12edd1e
Thu Mar 17 14:54:21 -03 2022: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|5
total_score: 15/70
673285e
Thu Mar 17 14:57:20 -03 2022: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
40f95de
Thu Mar 17 14:58:48 -03 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
b8345b8
Thu Mar 17 14:59:23 -03 2022: 
 list.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  3|5
total_score: 15/70
5a12e1a
Thu Mar 17 15:02:15 -03 2022: 
 list.c | 9 ++-------
 1 file changed, 2 insertions(+), 7 deletions(-)
 tests:  3|5
total_score: 15/70
0232a9b
Thu Mar 17 15:06:27 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
c3e727b
Thu Mar 17 15:09:40 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
9dba371
Thu Mar 17 15:10:05 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
787e607
Thu Mar 17 15:11:03 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
18631fe
Thu Mar 17 15:11:25 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
13982fc
Thu Mar 17 15:12:31 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
a52b3d7
Thu Mar 17 15:13:13 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
90ee168
Thu Mar 17 15:13:36 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|5
total_score: 15/70
ce93fa5
Thu Mar 17 15:14:48 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
./list.c:54:12: error: incompatible integer to pointer conversion returning 'int' from a function with result type 'void *' [-Werror,-Wint-conversion]
    return (2);
           ^~~
1 error generated.
Compilation failed
9cee34a
Thu Mar 17 15:15:45 -03 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2252b94
